<resources>
    <string name="app_name">Weather App</string>
    <string name="version">Version</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="progress">Loading..</string>
    <string name="something_gone_wrong">Something went wrong</string>

    <!-- Splash Screen -->
    <string name="desc_about_app">Weather forecast | ☀️ OpenWeatherMap</string>
    <string name="desc_app_logo">App Logo</string>
    <string name="msg_splash_bottom_tag">ICKMITL AOOP FINAL Project </string>

    <!-- Current Weather/Home Screen -->
    <string name="placeholder_location">BANGKOK, TH</string>
    <string name="placeholder_lastUpdateTime">19 NOVEMBER 2019, 20:08 PM</string>

    <string name="placeholder_weatherStatus">Clear Sky</string>
    <string name="placeholder_averageTemp">29°C</string>
    <string name="placeholder_minTemp">Min Temp: 05:05 AM</string>
    <string name="placeholder_maxTemp">Max Temp: 05:05 PM</string>
    <string name="daily_sunrise">Sunrise</string>
    <string name="placeholder_sunriseTime">06:40 AM</string>
    <string name="daily_sunset">Sunset</string>
    <string name="placeholder_sunsetTime">06:40 AM</string>

    <string name="daily_windSpeed">Wind</string>
    <string name="placeholder_windSpeed">0.36</string>
    <string name="daily_pressure">Pressure</string>
    <string name="placeholder_pressure">1011</string>
    <string name="daily_humidity">Humidity</string>
    <string name="placeholder_humidity">70</string>
    <string name="credit_createBy">Created By</string>
    <string name="credit_ICKMITL">ICKMITL</string>

    <string-array name="temperature_degree">
        <item>°C</item>
        <item>°F</item>
    </string-array>
    <string-array name="wind_degree">
        <item>m/s</item>
        <item>m/h</item>
    </string-array>


    <!-- Setting Screen -->
    <string name="title_setting">Setting</string>

    <string name="setting_ImperialUnit">Unit Display</string>
    <string name="toggle_Metric">Metric</string>
    <string name="toggle_Imperial">Imperial</string>
    <string name="setting_ThaiLanguage">Language</string>
    <string name="toggle_English">English</string>
    <string name="toggle_Thai">Thai</string>
    <string name="setting_Location">Location</string>
    <string name="Button_LocationCurrent">Current</string>
    <string name="Button_LocationManual">Manual</string>
    <string name="search_title"> 🔍 Enter City Name </string>

    <!-- Setting Screen -->
    <string name="title_next5days">Next 5 Days</string>
    <!-- Legacy -->
    <string name="msg_failed">Something went wrong… Please try later!</string>
    <string name="msg_gps">Please enable GPS for current location access</string>
    <string name="msg_internet">Please connect to Internet</string>
    <string name="msg_location_services">Allow the application access to location permission</string>

    <string name="action_search">Search Weather by City Name</string>
    <string name="action_about">About</string>

    <string name="desc_weather">Weather condition</string>

    <string name="temp_lable">Temperature:</string>
    <string name="wind_lable">Wind:</string>
    <string name="wind_unit">m/s</string>
    <string name="pressure_lable">Pressure:</string>
    <string name="pressure_unit">hPa</string>
    <string name="humidity_lable">humidity:</string>
    <string name="humidity_unit">%</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="info">Info</string>
    <string name="weather_icon">Weather Icon</string>
</resources>
