<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    android:background="@drawable/bg_gradient"
    android:id="@+id/tvSwipeMe">

    <RelativeLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">
        <LinearLayout
            android:id="@+id/addressContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/placeholder_location"/>
            <TextView
                android:id="@+id/updated_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/placeholder_lastUpdateTime"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/overviewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:text="@string/placeholder_weatherStatus"/>
            <TextView
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="90sp"
                android:fontFamily="sans-serif-thin"
                android:layout_gravity="center"
                android:text="@string/placeholder_averageTemp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:id="@+id/temp_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_minTemp"/>
                <Space
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/temp_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_maxTemp"/>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/detailsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        app:srcCompat="@drawable/sunrise"
                        app:tint="#FFFFFF"
                        android:contentDescription="@string/sunrise" />
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/daily_sunrise"/>
                    <TextView
                        android:id="@+id/sunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/placeholder_sunriseTime"/>
                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        app:srcCompat="@drawable/sunset"
                        app:tint="#FFFFFF"
                        android:contentDescription="@string/sunset" />
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/daily_sunset"/>
                    <TextView
                        android:id="@+id/sunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/placeholder_sunsetTime"/>
                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        app:srcCompat="@drawable/wind"
                        app:tint="#FFFFFF"
                        android:contentDescription="@string/wind" />
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/daily_windSpeed"/>
                    <TextView
                        android:id="@+id/wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/placeholder_windSpeed"/>
                </LinearLayout>
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        app:srcCompat="@drawable/pressure"
                        app:tint="#FFFFFF"
                        android:contentDescription="@string/pressure" />
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/daily_pressure"/>
                    <TextView
                        android:id="@+id/pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/placeholder_pressure"/>
                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        app:srcCompat="@drawable/humidity"
                        app:tint="#FFFFFF"
                        android:contentDescription="@string/humidity" />
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/daily_humidity"/>
                    <TextView
                        android:id="@+id/humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/placeholder_humidity"/>
                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1">
                    <ImageButton
                        android:id="@+id/action_about"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        app:srcCompat="@drawable/info"
                        app:tint="#FFFFFF"
                        android:contentDescription="@string/info" />
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/credit_createBy"/>
                    <TextView
                        android:id="@+id/about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/credit_ICKMITL"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>


    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:text="@string/something_gone_wrong"/>


</RelativeLayout>